# open-molecule-data-pipeline

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: ingestion-example.yaml
data/: Index_of_pubchem_Compound_CURRENT-Full_SDF.html  ZINC-downloader-2D-txt.uri  ZINC22-downloader-2D-smi.gz.wget  chEMBL_sdf_link.txt  pubchem_sdf_link.txt
docs/: injestion_suggestion.md  system-plan.md
src/: cli.py
src/common/: __init__.py
src/ingestion/: __init__.py  chemspider.py  common.py  pubchem.py  runner.py  zinc.py
src/open_molecule_data_pipeline/: __init__.py  cli.py  logging_utils.py
src/open_molecule_data_pipeline/analysis/: __init__.py
src/open_molecule_data_pipeline/ingestion/: __init__.py  aria2.py  chembl.py  cli.py  common.py  pubchem.py  runner.py  sdf.py  zinc.py
src/pipeline/: __init__.py
src/reporting/: __init__.py
tests/unit/ingestion/: test_aria2.py  test_common.py  test_pubchem.py  test_runner.py  test_zinc.py
