[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "open-molecule-data-pipeline"
version = "0.1.0"
description = "Scalable SMILES ingestion and processing toolkit."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Open Molecule Project"}]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.6.3",
    "polars>=0.20.14",
    "rdkit-pypi>=2022.9.5",
    "tenacity>=8.2.3",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "orjson>=3.9.15",
    "uvicorn>=0.27.1",
    "structlog>=23.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.2",
    "types-pyyaml",
    "types-requests"
]

[project.scripts]
smiles = "open_molecule_data_pipeline.cli:main"


[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/open_molecule_data_pipeline"]

